Release current state.